fixed scroller issue on create team soccer page

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -1109,9 +1109,37 @@
                           </tr>
                         </thead>
                       </table>
-                      <div class="nl-table-scroll">
+                      <div class="nl-table-scroll2">
                         <table class="table table-striped">
                           <tbody>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>ACT</td>
+                              <td class="orange">GK</td>
+                              <td>RMA</td>
+                              <td>FCB</td>
+                              <td>09/17/17 11:00 PM</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>ACT</td>
+                              <td class="orange">D</td>
+                              <td>RMA</td>
+                              <td>FCB</td>
+                              <td>09/17/17 11:00 PM</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
                             <tr>
                               <td>
                                 <button class="btn btn-primary btn-sm">Draft</button>
