added status bar explanation on my teams page

--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -109,6 +109,14 @@
                 <div class="btn btn-primary btn-lg btn-create-team">Create team</div></a></div>
             <div class="col-6 col-sm-6 col-md-6 col-lg-4 helmet"><a href="#"> 
                 <div class="btn btn-primary btn-lg btn-create-team">Create Helmet</div></a></div>
+            <!--div.col-sm-12-->
+            <div class="nl-status-wrapper">
+              <ul>
+                <li><span class="playing indicator"></span><span>Playing</span></li>
+                <li><span class="played indicator"></span><span>Played</span></li>
+                <li><span class="not-playing indicator"></span><span>Not Playing</span></li>
+              </ul>
+            </div>
           </div>
           <div class="row nl-m-b-25">
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
