shirts on soccer teams overview page

--- a/markup/_dist/my_teams_soccer.html
+++ b/markup/_dist/my_teams_soccer.html
@@ -107,6 +107,13 @@
           <div class="row">
             <div class="col-md-12"><a href="create_team.html"> 
                 <div class="btn btn-primary btn-lg btn-create-team">Create team</div></a></div>
+            <div class="nl-status-wrapper">
+              <ul>
+                <li><span class="playing indicator"></span><span>Playing</span></li>
+                <li><span class="played indicator"></span><span>Played</span></li>
+                <li><span class="not-playing indicator"></span><span>Not Playing</span></li>
+              </ul>
+            </div>
           </div>
           <div class="row nl-m-b-25">
             <div class="col-12 col-md-6 col-lg-6 col-xl-3">
@@ -114,7 +121,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
@@ -237,7 +244,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
@@ -360,7 +367,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
@@ -483,7 +490,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
@@ -606,7 +613,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
@@ -729,7 +736,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
@@ -852,7 +859,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
@@ -975,7 +982,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team name NLC2</p>
+                      <p>Team name NLC2</p><img src="assets/img/img-players.png" alt="shirt">
                     </div>
                   </div>
                 </div>
