updated soccer field attributes names for easier JS implementation backend

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -477,7 +477,7 @@
                 <div role="tabpanel" id="week3" class="tab-pane active top-level-panel2">
                   <div class="content">
                     <div class="row">
-                      <div class="col-lg-12">
+                      <div class="col-10 offset-1 col-lg-12 offset-lg-0">
                         <ul role="tablist" class="nav menu">
                           <li class="nav-item"><a data-toggle="tab" href="#manager1" role="tab" class="nav-link active">
                               <div class="menu-item top-5">
@@ -693,13 +693,13 @@
             </div>
           </div>
           <div class="row contests bottom-teams-contests-section">
-            <div class="col-12 col-sm-6 offset-sm-3 col-lg-5 offset-lg-0 col-xl-5 field">
+            <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-lg-5 offset-lg-0 col-xl-5 field">
               <div class="nl-section nl-create-team homepage-field">
                 <div class="row">
-                  <div class="col-12">
+                  <div class="col-12 no-padding-mobile">
                     <h5>MY TEAMS</h5>
                   </div>
-                  <div class="col-12 col-md-12 col-lg-12 col-xl-12">
+                  <div class="col-12 col-md-12 col-lg-12 col-xl-12 no-padding-mobile">
                     <form class="form-signin dropdown-my-teams">
                       <div class="input-group">
                         <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
