--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -705,10 +705,10 @@
             <div class="col-12 col-sm-6 offset-sm-3 col-lg-5 offset-lg-0 col-xl-5 field">
               <div class="nl-section nl-create-team homepage-field soccer">
                 <div class="row">
-                  <div class="col-12">
+                  <div class="col-12 no-padding-mobile">
                     <h5>MY TEAMS</h5>
                   </div>
-                  <div class="col-12 col-md-12 col-lg-12 col-xl-12">
+                  <div class="col-12 col-md-12 col-lg-12 col-xl-12 no-padding-mobile">
                     <form class="form-signin dropdown-my-teams">
                       <div class="input-group">
                         <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
@@ -728,7 +728,7 @@
                     </div>
                     <div class="nl-team-field">
                       <div class="player-main-block soccer">
-                        <div data-position="G" class="nl-player-block nl-G-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
+                        <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
@@ -746,49 +746,49 @@
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="DAL" class="nl-player-block nl-DAL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="DL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="DAR" class="nl-player-block nl-DAR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="CM" class="nl-player-block nl-CM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="RWM" class="nl-player-block nl-RWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="LWM" class="nl-player-block nl-LWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="RS" class="nl-player-block nl-RS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="LS" class="nl-player-block nl-LS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="ST" class="nl-player-block nl-ST-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                        <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>gronkowski</p>
                             <p class="data"><span>12.67</span> <span>$42000</span></p>
