--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -1247,7 +1247,7 @@
               </div>
               <div class="nl-team-field">
                 <div class="player-main-block soccer">
-                  <div data-position="G" class="nl-player-block nl-G-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
+                  <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1268,56 +1268,56 @@
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DAL" class="nl-player-block nl-DAL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DAR" class="nl-player-block nl-DAR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="CM" class="nl-player-block nl-CM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RWM" class="nl-player-block nl-RWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LWM" class="nl-player-block nl-LWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RS" class="nl-player-block nl-RS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LS" class="nl-player-block nl-LS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="ST" class="nl-player-block nl-ST-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
