--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -100,12 +100,12 @@
       <section class="nl-section nl-players nl-live-score">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-12 page-heading">
+            <div class="col-12 page-heading">
               <h1>Live scores</h1>
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 col-lg-6 col-xl-8">
+            <div class="col-12 col-lg-6 offset-lg-0 col-xl-8">
               <h5 class="d-inline-block component-header">Matches</h5>
               <div class="matches">
                 <div class="matches__scrollarea">
@@ -232,7 +232,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-lg-6 col-xl-4 live-current-contest">
+            <div class="col-10 offset-1 col-sm-10 offset-sm-1 col-lg-6 offset-lg-0 col-xl-4 live-current-contest">
               <h5 class="d-inline-block component-header">My current contests</h5><a class="btn btn-primary btn-sm btn-inline">Refresh</a>
               <div class="current-contents">
                 <div class="nl-table-responsive">
@@ -307,7 +307,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 col-lg-6 col-xl-4">
+            <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-lg-6 offset-lg-0 col-xl-4">
               <h5 class="d-inline-block component-header">Contest info</h5>
               <div class="nl-contest-info-table">
                 <div class="table-heading">
@@ -363,7 +363,7 @@
                   </thead>
                 </table>
                 <div class="nl-table-scroll3">
-                  <table class="table table-striped table-info4">
+                  <table class="table table-striped table-info4 contestants">
                     <tbody>
                             <tr>
                               <td>1.</td>
@@ -500,7 +500,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-lg-6 col-xl-4">
+            <div class="col-10 offset-1 col-sm-10 offset-sm-1 col-lg-6 offset-lg-0 col-xl-4">
               <h5 class="d-inline-block component-header">MY TEAM</h5>
               <div class="team-field-section">
                 <div class="rank">
@@ -583,55 +583,64 @@
                   <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/K.png" alt="K">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/QB.png" alt="QB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/TE.png" alt="TE">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span></p>
                     </div>
                   </div>
                   <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
                     <div class="nl-player-block--data">
                       <p>PATRIOTS</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span>		</p>
+                      <p class="data">FP <span>12.67</span> </p>
+                      <p class="data">Score <span>15</span>		</p>
                     </div>
                   </div>
                 </div>
@@ -646,7 +655,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 no-padding">
                       <table class="table table-striped nl-team-list-table">
                         <thead>
                           <tr>
@@ -700,6 +709,18 @@
                                   <td>30</td>
                                   <td>$0</td>
                                 </tr>
+                                <tr>
+                                  <td>Player name</td>
+                                  <td class="pos">FLEX</td>
+                                  <td>30</td>
+                                  <td>$0</td>
+                                </tr>
+                                <tr>
+                                  <td>Player name</td>
+                                  <td class="pos">FLEX</td>
+                                  <td>30</td>
+                                  <td>$0</td>
+                                </tr>
                         </tbody>
                       </table>
                     </div>
@@ -707,7 +728,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-8 offset-sm-2 col-xl-4 offset-xl-0 chatbox">
+            <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-xl-4 offset-xl-0 chatbox">
               <h5 class="d-inline-block component-header">Live chat</h5>
               <div class="nl-contest-info-table">
                 <div class="table-heading">
@@ -740,7 +761,7 @@
             </div>
           </div>
           <div class="row">
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -748,7 +769,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -860,7 +881,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -868,7 +889,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -980,7 +1001,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -988,7 +1009,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1100,7 +1121,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1108,7 +1129,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1220,7 +1241,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1228,7 +1249,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1340,7 +1361,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1348,7 +1369,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1460,7 +1481,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1468,7 +1489,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1580,7 +1601,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1588,7 +1609,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1700,7 +1721,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1708,7 +1729,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1820,7 +1841,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1828,7 +1849,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -1940,7 +1961,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -1948,7 +1969,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
@@ -2060,7 +2081,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-lg-4 col-xl-2 small-padding-live-score">
+                  <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-4 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
                         <div class="rank__no aligner">
@@ -2068,7 +2089,7 @@
                         </div>
                         <div class="rank__title">
                           <p>Best team evah</p>
-                          <p>Best manager evah</p>
+                          <p class="italic">Best manager evah</p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
                       </div>
