top 5 homepage on mobile improved with rank and font-weight and sizes, rounded corners on contests table

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -145,7 +145,7 @@
                 <button type="button" data-toggle="modal" data-target="#playerModal" class="mobile-menu dropdown">Choose Positions</button>
                 <div data-toggle="tab" href="#player1" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-player-top5">1</p>
                   </div>
                   <p>MattRyan1</p>
                 </div>
@@ -153,13 +153,13 @@
               <div class="row">
                 <div data-toggle="tab" href="#player2" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-player-top5">2 </p>
                   </div>
                   <p>MattRyan2</p>
                 </div>
                 <div data-toggle="tab" href="#player3" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-player-top5">3</p>
                   </div>
                   <p>MattRyan3</p>
                 </div>
@@ -167,13 +167,13 @@
               <div class="row">
                 <div data-toggle="tab" href="#player4" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-player-top5">4</p>
                   </div>
                   <p>MattRyan4</p>
                 </div>
                 <div data-toggle="tab" href="#player5" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-player-top5">5</p>
                   </div>
                   <p>MattRyan5	</p>
                 </div>
@@ -440,7 +440,7 @@
                 <button type="button" data-toggle="modal" data-target="#weekModal" class="mobile-menu dropdown">Choose Week</button>
                 <div data-toggle="tab" href="#manager1" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-manager-top5">1</p>
                   </div>
                   <p>MattRyan1</p>
                 </div>
@@ -448,13 +448,13 @@
               <div class="row">
                 <div data-toggle="tab" href="#manager2" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-manager-top5">2</p>
                   </div>
                   <p>MattRyan2</p>
                 </div>
                 <div data-toggle="tab" href="#manager3" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-manager-top5">3</p>
                   </div>
                   <p>MattRyan3</p>
                 </div>
@@ -462,13 +462,13 @@
               <div class="row">
                 <div data-toggle="tab" href="#manager4" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-manager-top5">4</p>
                   </div>
                   <p>MattRyan4</p>
                 </div>
                 <div data-toggle="tab" href="#manager5" role="tab" class="mobile-menu">
                   <div class="number">
-                    <p>1</p>
+                    <p class="rank-manager-top5">5</p>
                   </div>
                   <p>MattRyan5 </p>
                 </div>
@@ -861,7 +861,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-12 col-lg-8 offset-lg-2">
+                    <div class="col-12 col-lg-12 col-xl-10 offset-xl-1">
                       <div class="nl-team-info">
                         <div class="nl-team-data">
                           <div class="row"> 
@@ -903,7 +903,7 @@
                       <li class="nav-item smaller-nav"><a data-toggle="tab" href="#d" role="tab" class="nav-link">Private</a></li>
                       <li class="nav-item bigger-nav"><a data-toggle="tab" href="#f" role="tab" class="nav-link">My&nbsp;contests</a></li>
                     </ul>
-                    <div class="tab-content">
+                    <div class="tab-content rounded-corners">
                       <div id="all" role="tabpanel" class="tab-pane active">
                         <div class="nl-table-responsive">
                           <div class="nl-table-mw homepage-contest-content">
