football field update, ranks teams, projections bar update, updated live matches bar, corrected wrong info enter contests, soccer field positioning players updated on enter contest

--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -125,20 +125,20 @@
                 <div class="nl-team-name">your team</div>
                 <div class="nl-team-data">
                   <div class="row">
-                    <div class="col-7">TOTAL FP:</div>
+                    <div class="col-7">TOTAL FP</div>
                     <div class="col-5"><span class="avalibe">101.9 FP</span></div>
                   </div>
                   <div class="row">
-                    <div class="col-7">TOTAL SALARY:</div>
+                    <div class="col-7">SALARY CAP</div>
+                    <div class="col-5"><span>$60000</span></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-7">TOTAL SALARY</div>
                     <div class="col-5"><span>$46730</span></div>
                   </div>
                   <div class="row">
-                    <div class="col-7">Available:</div>
+                    <div class="col-7">Available</div>
                     <div class="col-5"><span class="avalibe">$25000</span></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-7">Projections:</div>
-                    <div class="col-5"><span>154</span></div>
                   </div>
                 </div>
               </div>
