--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -101,133 +101,121 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 page-heading">
-              <h1>Live scores</h1>
+              <h1>Live Contest Dashboard</h1>
             </div>
           </div>
-          <div class="row">
+          <div class="row top-bar-live-scores">
             <div class="col-12 col-lg-6 offset-lg-0 col-xl-8">
               <h5 class="d-inline-block component-header">Matches</h5>
               <div class="matches rounded-corners">
                 <div class="matches__scrollarea">
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                         <div class="matches__result">
-                          <div class="matches__result-header"><span>Wed. 12th 10:45</span></div>
                           <div class="matches__content">
                             <ul class="matches__leaders-list">
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>cl</span><span>7</span></li>
-                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>cin</span><span>448</span></li>
-                              <li><span>Final</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU"></span><span>RMA</span><span>2</span></li>
+                              <li><span><img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU"></span><span>FCB</span><span>1</span></li>
                             </ul>
                           </div>
+                          <div class="matches__result-header"><span>Wed 10:45</span></div>
                         </div>
                 </div>
               </div>
@@ -307,7 +295,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 offset-0 col-sm-6 offset-sm-3 col-lg-6 offset-lg-0 col-xl-4">
+            <div class="col-12 offset-0 col-sm-10 offset-sm-1 col-lg-6 offset-lg-0 col-xl-4">
               <h5 class="d-inline-block component-header">Contest info</h5>
               <div class="nl-contest-info-table">
                 <div class="table-heading">
@@ -650,7 +638,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet">
                       </div>
                     </div>
                   </div>
@@ -728,7 +716,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-xl-4 offset-xl-0 chatbox">
+            <div class="col-10 offset-1 col-sm-10 offset-sm-1 col-xl-4 offset-xl-0 chatbox">
               <h5 class="d-inline-block component-header">Live chat</h5>
               <div class="nl-contest-info-table">
                 <div class="table-heading">
