better outline and centering of top player info

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -99,14 +99,14 @@
       </div>
     </header>
     <main>
-      <section class="nl-section homepage">
+      <section class="nl-section homepage football-homepage">
         <div class="container-fluid">
           <div class="row sports-options">
             <h3 class="title col-12 col-lg-6">Pick Your Sport:</h3>
             <div class="sports-icon col-12 col-lg-6"><img src="assets/img/football.png" alt="" class="sports"><img src="assets/img/basketball.png" alt="" class="sports"><img src="assets/img/americanfootball.png" alt="" class="sports"><img src="assets/img/baseball.png" alt="" class="sports"><img src="assets/img/cricket.png" alt="" class="sports"><img src="assets/img/hockey.png" alt="" class="sports"><img src="assets/img/mma.png" alt="" class="sports"></div>
           </div>
           <div class="row top-5-section">
-            <div class="col-12 col-lg-5 col-xl-5 position">
+            <div class="col-12 col-lg-6 col-xl-6 position">
               <h5 class="text-center visible-xxs subtitle position">TOP 5<span>Tight ends</span></h5>
               <h5 class="hidden-xxs subtitle">TOP 5<span class="position-subtitle"> 
                   <div class="dropdown player-position">
@@ -431,7 +431,7 @@
                 });
               </script>
             </div>
-            <div class="col-12 col-lg-6 offset-lg-1 offset-xl-1 col-xl-6 week">
+            <div class="col-12 col-lg-6 col-xl-6 week">
               <h5 class="text-center visible-xxs subtitle">TOP 5<span>Managers</span>in <span class="week">Week 3</span></h5>
               <h5 class="hidden-xxs subtitle">TOP 5<span>Managers  </span>in<span> 
                   <div class="dropdown week-position">
