fixed dropdown icons bug on top 5

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -1223,7 +1223,7 @@
                   <div class="col-12 no-padding-mobile">
                     <h5>MY TEAMS</h5>
                   </div>
-                  <div class="col-12 col-md-12 col-lg-12 col-xl-12 no-padding-mobile">
+                  <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-6 offset-xl-3 no-padding-mobile">
                     <form class="form-signin dropdown-my-teams">
                       <div class="input-group">
                         <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
