made new upcoming contest section so enter button could get linked per sport

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -1453,9 +1453,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1464,9 +1463,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1475,9 +1473,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1486,9 +1483,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1497,9 +1493,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1508,9 +1503,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1519,9 +1513,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1530,9 +1523,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1541,9 +1533,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1552,9 +1543,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1563,9 +1553,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1574,9 +1563,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1585,9 +1573,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1596,9 +1583,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1607,9 +1593,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1618,9 +1603,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1629,9 +1613,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1667,9 +1650,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1678,9 +1660,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1689,9 +1670,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="football_enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
