--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -1558,9 +1558,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1569,9 +1568,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1580,9 +1578,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1591,9 +1588,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1602,9 +1598,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1613,9 +1608,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1624,9 +1618,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1635,9 +1628,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1646,9 +1638,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1657,9 +1648,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1668,9 +1658,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1679,9 +1668,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1690,9 +1678,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1701,9 +1688,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1712,9 +1698,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1723,9 +1708,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1734,9 +1718,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1772,9 +1755,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1783,9 +1765,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
@@ -1794,9 +1775,8 @@
                                     <td>71/100</td>
                                     <td>3</td>
                                     <td>1000</td>
-                                    <td>
-                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                    </td>
+                                    <td><a href="enter_contests.html">
+                                        <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                     <td>STARTED</td>
                                   </tr>
                                   <tr>
